--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "main": "index.js",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist" ,
+    "deploy": "gh-pages -d dist",
     "start": "webpack serve --open",
     "build": "webpack --mode production"
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
